--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -15,6 +15,16 @@ h1 {
   margin-bottom: 10px;
 }
 
+button {
+  font-size: 18px;
+  padding: 8px 15px;
+  border-radius: 3px;
+  border: 0;
+}
+
+button:hover {
+  background-color: #888;
+}
 .navigation {
   width: 100%;
   height: 40px;
@@ -115,9 +125,11 @@ input[type=url]:focus {
 
 
 .error {
-  border: red solid 4px;
-  padding: 10px;
+/*  border: red solid 4px;
+*/  padding: 10px;
   margin: 0 10px;
+  font-weight: 600;
+  color: red;
 }
 
 .clean {
